[package]
name = "aws-hyper"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.2", features = ["client", "http1", "http2", "tcp", "runtime"] }
tower = { version = "0.4.2", features = ["util"] }
hyper-tls = "0.5.0"
aws-auth = { path = "../aws-auth" }
aws-sig-auth = { path = "../aws-sig-auth" }
aws-endpoint = { path = "../aws-endpoint" }
http = "0.2.3"
bytes = "1"
http-body = "0.4.0"
smithy-http = { path = "../smithy-http" }
smithy-http-tower = { path = "../smithy-http-tower" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tower-test = "0.4.0"
aws-types = { path = "../aws-types" }
