[workspace]
resolver = "2"
members = [
    "inlineable",
    "aws-smithy-async",
    "aws-smithy-cbor",
    "aws-smithy-checksums",
    "aws-smithy-compression",
    "aws-smithy-client",
    "aws-smithy-eventstream",
    "aws-smithy-http",
    "aws-smithy-http-auth",
    "aws-smithy-http-client",
    "aws-smithy-http-server",
    "aws-smithy-http-server-python",
    "aws-smithy-http-tower",
    "aws-smithy-json",
    "aws-smithy-protocol-test",
    "aws-smithy-query",
    "aws-smithy-runtime",
    "aws-smithy-runtime-api",
    "aws-smithy-types",
    "aws-smithy-types-convert",
    "aws-smithy-wasm",
    "aws-smithy-mocks",
    "aws-smithy-mocks-experimental",
    "aws-smithy-experimental",
    "aws-smithy-xml",
    "aws-smithy-observability",
    "aws-smithy-observability-otel",
]
