[workspace]
resolver = "2"
members = [
    "inlineable",
    "aws-smithy-async",
    "aws-smithy-cbor",
    "aws-smithy-checksums",
    "aws-smithy-compression",
    "aws-smithy-dns",
    "aws-smithy-eventstream",
    "aws-smithy-http",
    "aws-smithy-http-client",
    "aws-smithy-http-server",
    "aws-smithy-legacy-http",
    "aws-smithy-legacy-http-server",
    "aws-smithy-http-server-python",
    "aws-smithy-json",
    "aws-smithy-protocol-test",
    "aws-smithy-query",
    "aws-smithy-runtime",
    "aws-smithy-runtime-api",
    "aws-smithy-types",
    "aws-smithy-types-convert",
    "aws-smithy-wasm",
    "aws-smithy-mocks",
    "aws-smithy-experimental",
    "aws-smithy-xml",
    "aws-smithy-observability",
    "aws-smithy-observability-otel",
]
