# Note: this workspace exists solely for the convenience of running tests. These packages will all eventually
# end up in the final SDK workspace.
[workspace]
resolver = "2"
members = [
    "aws-credential-types",
    "aws-inlineable",
    "aws-runtime",
    "aws-runtime-api",
    "aws-sigv4",
    "aws-types",
]

exclude = ["aws-config"]
