# Note: this workspace exists solely for the convenience of running tests. These packages will all eventually
# end up in the final SDK workspace.
[workspace]
resolver = "2"
members = [
    "aws-credential-types",
    "aws-inlineable",
    "aws-runtime",
    "aws-runtime-api",
    "aws-sigv4",
    "aws-types",
    # DDB HLL
    "dynamodb-mapper/aws-sdk-dynamodb-expressions",
    "dynamodb-mapper/aws-sdk-dynamodb-mapper",
    "dynamodb-mapper/aws-sdk-dynamodb-mapper-core",
    "dynamodb-mapper/aws-sdk-dynamodb-mapper-macros",
]
exclude = ["aws-config"]
