[package]
name = "dynamo-it"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
http-body = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
dynamo = { version = "0.0.1", path = "../build/smithyprojections/codegen-test/dynamo/rust-codegen/"}
pin-utils = "0.1.0"
aws-sigv4 = "0.0.1"
smithy-types = { path = "../../rust-runtime/smithy-types" }
