[package]
name = "dynamo-it"
version = "0.1.0"
authors = ["Russell Cohen <rcoh@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithy-types = { path = "../../rust-runtime/smithy-types" }
dynamo = { version = "0.0.1", path = "../build/smithyprojections/codegen-test/dynamo/rust-codegen/"}
io-v0 = { path = "../../rust-runtime/io-v0" }
tokio = { version = "0.2", features = ["full"] }
