[package]
name = "pokemon-service-lambda"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Smithy-rs Server Team <smithy-rs-server@amazon.com>"]
description = "A smithy Rust service to retrieve information about Pokémon via Lambda."

[dependencies]
async-stream = "0.3.4"
clap = { version = "4.1.11", features = ["derive"] }
http = "1"
hyper = {version = "1", features = ["server"] }
tokio = "1.26.0"
tracing = "0.1"

lambda_http = "1"

# Local paths
pokemon-service-server-sdk = { path = "../pokemon-service-server-sdk/", features = ["aws-lambda"] }
pokemon-service-common = { path = "../pokemon-service-common/" }
