[package]
name = "pokemon-service-tls"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Smithy-rs Server Team <smithy-rs-server@amazon.com>"]
description = "A smithy Rust service to retrieve information about Pokémon."

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
hyper = { version = "0.14.26", features = ["server"] }
tokio = "1.26.0"
tracing = "0.1"

# These dependencies are only required for the `pokemon-service-tls` program.
tls-listener = { version = "0.7.0", features = ["rustls", "hyper-h2"] }
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0.2"
futures-util = { version = "0.3.29", default-features = false }

# Local paths
pokemon-service-server-sdk = { path = "../pokemon-service-server-sdk/" }
pokemon-service-common = { path = "../pokemon-service-common/" }

[dev-dependencies]
assert_cmd = "2.0"
serial_test = "3.1.1"

# These dependencies are only required for testing the `pokemon-service-tls` program.
hyper-rustls = { version = "0.24", features = ["http2"] }
hyper-tls = { version = "0.5" }

# Local paths
aws-smithy-http = { path = "../../rust-runtime/aws-smithy-http/" }
aws-smithy-runtime = { path = "../../rust-runtime/aws-smithy-runtime", features = ["client", "connector-hyper-0-14-x"] }
aws-smithy-types = { path = "../../rust-runtime/aws-smithy-types/" }
pokemon-service-client = { path = "../pokemon-service-client/", features = [
    "behavior-version-latest",
] }

