[package]
name = "pokemon-service-tls"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Smithy-rs Server Team <smithy-rs-server@amazon.com>"]
description = "A smithy Rust service to retrieve information about Pokémon."

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
http = "1"
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "service"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tower = "0.4"

# These dependencies are only required for the `pokemon-service-tls` program.
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
futures-util = { version = "0.3.29", default-features = false }

# Local paths
pokemon-service-server-sdk = { path = "../pokemon-service-server-sdk/" }
pokemon-service-common = { path = "../pokemon-service-common/" }

[dev-dependencies]
assert_cmd = "2.0"
serial_test = "3.1.1"

# These dependencies are only required for testing the `pokemon-service-tls` program.
hyper-rustls = { version = "0.27", features = ["http2"] }

# Local paths
aws-smithy-http-client = { path = "../../rust-runtime/aws-smithy-http-client", features = ["default-client", "rustls-aws-lc"] }
aws-smithy-runtime = { path = "../../rust-runtime/aws-smithy-runtime", features = ["client", "default-https-client"] }
aws-smithy-types = { path = "../../rust-runtime/aws-smithy-types/" }
pokemon-service-client = { path = "../pokemon-service-client/", features = [
    "behavior-version-latest",
] }
