[package]
name = "pokemon-service"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Smithy-rs Server Team <smithy-rs-server@amazon.com>"]
description = "A smithy Rust service to retrieve information about Pokémon."

[dependencies]
clap = { version = "4", features = ["derive"] }
http = "1"
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "service"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
tower = "0.4"
tracing = "0.1"

# Local paths
pokemon-service-server-sdk = { path = "../pokemon-service-server-sdk/", features = ["request-id"]}
pokemon-service-common = { path = "../pokemon-service-common/" }

[dev-dependencies]
assert_cmd = "2.0"
async-stream = "0.3"
bytes = "1"
http-body-util = "0.1"
rand = "0.8.5"
serial_test = "3.1.1"

# We use hyper client in tests
hyper = { version = "1", features = ["server", "client"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }

# This dependency is only required for testing the `pokemon-service-tls` program.
hyper-rustls = { version = "0.27", features = ["http2"] }

# Local paths
aws-smithy-runtime = { path = "../../rust-runtime/aws-smithy-runtime" }
pokemon-service-client = { path = "../pokemon-service-client/", features = [
    "behavior-version-latest",
] }
