[package]
name = "pokemon-service"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Smithy-rs Server Team <smithy-rs-server@amazon.com>"]
description = "A smithy Rust service to retrieve information about Pokémon."

[dependencies]
clap = { version = "4", features = ["derive"] }
http = "0.2"
hyper = { version = "0.14.26", features = ["server"] }
tokio = "1.26.0"
tower = "0.4"
tracing = "0.1"

metrique = { version = "=0.1.9", features = ["emf"] }
metrique-writer-core = "=0.1.7"
metrique-macro = "=0.1.6"
metrique-core = "=0.1.8"
metrique-writer = "=0.1.10"
metrique-service-metrics = "=0.1.9"
metrique-timesource = "=0.1.5"
metrique-writer-macro = "=0.1.4"
metrique-writer-format-emf = "=0.1.9"

tracing-appender = "0.2"

# Local paths
pokemon-service-server-sdk = { path = "../pokemon-service-server-sdk/", features = ["request-id"]}
pokemon-service-common = { path = "../pokemon-service-common/" }
aws-smithy-http-server-metrics = { path = "../../rust-runtime/aws-smithy-http-server-metrics" }

[dev-dependencies]
assert_cmd = "2.0"
async-stream = "0.3"
rand = "0.8.5"
serial_test = "3.1.1"

# We use hyper client in tests
hyper = { version = "0.14.26", features = ["server", "client"] }

# This dependency is only required for testing the `pokemon-service-tls` program.
hyper-rustls = { version = "0.24", features = ["http2"] }

# Local paths
aws-smithy-http = { version = "*" }
pokemon-service-client = { path = "../pokemon-service-client/", features = [
    "behavior-version-latest",
] }
