[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
sdk = { path = "../sdk/rust-server-codegen" }
hyper = { version = "0.x", features = ["full", "server"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"]}
async-stream = "0.3.6"
tracing = "0.1.41"
