[package]
name = "aws-smithy-checksums"
version = "0.0.0-smithy-rs-head"
authors = [
  "AWS Rust SDK Team <aws-sdk-rust@amazon.com>",
  "Zelda Hessler <zhessler@amazon.com>",
]
description = "Checksum calculation and verification callbacks"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/smithy-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-smithy-http = { path = "../aws-smithy-http" }
aws-smithy-types = { path = "../aws-smithy-types" }
bytes = "1"
crc32c = "0.6"
crc32fast = "1.3"
http = "0.2.3"
sha1 = "0.10"
sha2 = "0.10"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1.2"
tokio = { version = "1.6", features = ["macros"] }
tracing-test = "0.2.1"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
# End of docs.rs metadata
