[package]
name = "aws-smithy-checksums"
version = "0.64.2"
authors = [
    "AWS Rust SDK Team <aws-sdk-rust@amazon.com>",
    "Zelda Hessler <zhessler@amazon.com>",
]
description = "Checksum calculation and verification callbacks"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/smithy-lang/smithy-rs"
rust-version = "1.91"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-smithy-http = { path = "../aws-smithy-http" }
aws-smithy-types = { path = "../aws-smithy-types", features = ["http-body-1-x"]}
bytes = "1.10.0"
# FIXME(https://github.com/smithy-lang/smithy-rs/issues/3981): Keep pinned until we have more comprehensive testing in place
crc-fast = "~1.9.0"
hex = "0.4.3"
http-1x = {package = "http", version = "1.3.1"}
http-body-1x = {package = "http-body", version = "1.0.1"}
http-body-util = "0.1.3"
md-5 = "0.10"
pin-project-lite = "0.2.14"
sha1 = "0.10"
sha2 = "0.10"
tracing = "0.1.40"

[dev-dependencies]
bytes-utils = "0.1.2"
pretty_assertions = "1.3"
tokio = { version = "1.23.1", features = ["macros", "rt"] }
tracing-test = "0.2.1"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]
# End of docs.rs metadata
