[package]
name = "aws-smithy-compression"
version = "0.0.1"
authors = [
  "AWS Rust SDK Team <aws-sdk-rust@amazon.com>",
  "Zelda Hessler <zhessler@amazon.com>",
]
description = "Request compression for smithy clients."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/smithy-lang/smithy-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-smithy-types = { path = "../aws-smithy-types" }
aws-smithy-runtime-api = { path = "../aws-smithy-runtime-api" }
bytes = "1"
flate2 = "1"
http = "0.2.9"
http-body = "0.4.5"
pin-project-lite = "0.2.14"
tracing = "0.1"

[dev-dependencies]
bytes-utils = "0.1.2"
pretty_assertions = "1.3"
tokio = { version = "1.23.1", features = ["macros", "rt"] }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]
# End of docs.rs metadata
