[package]
name = "aws-smithy-compression"
version = "0.0.3"
authors = [
  "AWS Rust SDK Team <aws-sdk-rust@amazon.com>",
  "Zelda Hessler <zhessler@amazon.com>",
]
description = "Request compression for smithy clients."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/smithy-lang/smithy-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
http-body-0-4-x = [
  "dep:http-body-0-4",
  "dep:http-0-2",
  "aws-smithy-types/http-body-0-4-x",
]
http-body-1-x = [
  "dep:http-body-1-0",
  "dep:http-1-0",
  "dep:http-body-util",
  "aws-smithy-types/http-body-1-x",
]

[dependencies]
aws-smithy-types = { path = "../aws-smithy-types" }
aws-smithy-runtime-api = { path = "../aws-smithy-runtime-api" }
bytes = "1.10.0"
flate2 = "1.0.30"
futures-util = "0.3"
http-0-2 = { package = "http", version = "0.2.9", optional = true }
http-1-0 = { package = "http", version = "1", optional = true }
http-body-0-4 = { package = "http-body", version = "0.4.5", optional = true }
http-body-1-0 = { package = "http-body", version = "1", optional = true }
http-body-util = { version = "0.1.2", optional = true }
pin-project-lite = "0.2.14"
tracing = "0.1.40"

[dev-dependencies]
bytes-utils = "0.1.2"
pretty_assertions = "1.3"
tokio = { version = "1.23.1", features = ["macros", "rt"] }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]
# End of docs.rs metadata
